# fs-uae-launcher

./: .gitignore  BASEVERSION.FS  ChangeLog  INSTALL  Makefile  PACKAGE.FS  Pipfile  README  README.md  VERSION  VERSION.FS  bootstrap  bootstrap.sh  config.py  extra_imports.py  fs-fuse-launcher  fs-uae-launcher  fs-uae-launcher.spec  main.py  openretro-launcher  po-update.py  pyproject.toml  setup.py  update-version  update-version.py
_vendor/: __init__.py  dataclasses.py  typing_extensions.py
arcade/: Application.py  arcade_main.py  arcadetheme.py  callbacks.py  diskutil.py  gamecenter.py  gamecentersettings.py  gamecenterutil.py  gnome3.py  notification.py  option.py  platform.py  resources.py
data/: .gitignore
debian/: changelog  control  copyright  links  rules
docs/: compiling.md  file-database.md  game-database-export.md  game-database-export.py  privacy-notice.md  to-do.md  whdload-support.md
fs_uae_launcher/: CDManager.py  Config.py  ConfigChecker.py  ConfigurationScanner.py  DeviceManager.py  DownloadService.py  FSUAELauncher.py  FileScanner.py  FloppyManager.py  GamePaths.py  GameRatingSynchronizer.py  GameScanner.py  I18N.py  Options.py  OverlayDatabase.py  PluginHelper.py  Scanner.py  Settings.py  Signal.py  UpdateManager.py  Util.py  fs.py  main.py
fs_uae_workspace/: desktop.py  iconview.py  shell.py  vfs.py  vfsui.py  window.py
fsbc/: Application.py  Paths.py  Resources.py  Settings.py  SevenZipFile.py  ZipFile.py  application.py  configparser.py  debug.py  desktop.py  fs.py  http.py  init.py  logging.py  path.py  paths.py  queue.py  resources.py  settings.py  seven_zip_file.py  signal.py  system.py  task.py  unicode.py  user.py  util.py  zipfile.py
fsboot/: __init__.py  installation.py
fsbuild/: .gitignore  __init__.py  archive  build.sh  bundle-clean-linux.sh  bundle-clean-windows.sh  bundle.sh  debsrc  dist  dmg  dmg-build  dmg-notarize  dmg-settings.py  dmg-sign  fix-pyqt5.py  fix-pyqt6.py  notarize  obsdist  plugin.post.sh  plugin.pre.sh  sign  source  standalone.py  system.sh  upload  version  version.post.sh  version.py
fscore/: application.py  applicationdata.py  deprecated.py  developermode.py  events.py  filesystem.py  initializer.py  mainloop.py  memoize.py  observable.py  resources.py  settings.py  system.py  tasks.py  types.py  version.py
fsgamesys/: BaseContext.py  BaseDatabase.py  Database.py  FSGSDirectories.py  FSGameSystemContext.py  GameDatabase.py  LockerDatabase.py  (+17 more)
(+1402 files in other folders)
