[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 79
exclude = "/(amitools|OpenGL|oyoyo|xxx|\\.ropeproject|\\.eggs|\\.git|\\.hg|\\.mypy_cache|\\.nox|\\.tox|\\.venv|_build|buck-out|build|dist)/"

[tool.isort]
profile = "black"
multi_line_output = 3
skip = ["amitools", ".git", "oyoyo", "fsui/qt/__init__.py"]
skip_gitignore = true
line_length = 79
case_sensitive = false
follow_links = false

[tool.pylint.MASTER]
extension-pkg-whitelist = ["PyQt6"]

[tool.pylint."MESSAGES CONTROL"]
disable = [
    "fixme",
    "invalid-name",
    "missing-class-docstring",
    "missing-function-docstring",
    "missing-module-docstring",
    "too-few-public-methods",
    "too-many-instance-attributes",
    ]
